# Key-Value-disk-storage

./: .gitignore  CMakeLists.txt  README.md  boost_include.h  boost_mapped_file.cpp  btree.cpp  btree.h  btree_impl.h  btree_node.h  btree_node_impl.h  byte_data.cpp  byte_data.h  data_writer.cpp  data_writer.h  design.md  design_calculation.cpp  entry.h  file_mapping.cpp  file_mapping.h  file_mapping_impl.h  file_mapping_tests.cpp  io_manager.h  io_manager_impl.h  manage_file.cpp  manage_file.h  mem_util.cpp  mmap_regions.h  serializable_node.h  serializable_node_test.cpp  serialization.cpp  serialization.h  serialized_stl  test_util.h  utils.h
include/: CMakeLists.txt  FindBoost.cmake  btree.h  btree_impl.h  btree_node_impl.h  entry.h  storage.h  volume.h
include/btree_impl/: btree.h  btree_impl.h  btree_node.h  btree_node_impl.h  entry.h
include/io/: block_manager.h  file_mapping.h  file_mapping_impl.h  io_manager.h  io_manager_impl.h  lru_cache.h  mapped_file.h  mapped_file_impl.h  mapped_region.h
include/utils/: boost_include.h  error.h  forward_decl.h  size_info.h  utils.h
src/: btree.cpp  file_mapping_tests.cpp  mem_util.cpp  test.cpp
test/: CMakeLists.txt  PlatformInfo.cmake  block_manager_test.h  key_value_operations_tests.h  lru_cache_test.h  lru_mapped_region_test.h  main.cpp  mapped_file_tests.h  mapped_file_tests.hpp  size_info.h  storage_tests.h  stress_test.h  test.cpp  test_runner.h  test_stat.h  test_util.h  test_utils.h  test_value_generator.h  thread_pool.hpp  volume_tests.h
test/test_runner/: test_runner.h  test_value_generator.h
test/utils/: boost_fixture.h  mem_util.h  mem_util.hpp  size_info.h  thread_pool.h
